--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
- height: 100vh;
+ 
  background-color: #073b4c;
 }
 
@@ -8,6 +8,8 @@ body {
  align-items: center;
  justify-content: center;
  margin-top: 100px;
+ margin-right: 100px;
+ padding-right:100px;
 }
 
 h2 {
@@ -18,8 +20,8 @@ h2 {
 
 .birthdayCard {
   position: relative;
-  width: 250px;
-  height:350px;
+  width: 10px;
+  height:10px;
   cursor: pointer;
   transform-style: preserve-3d;
 	transform: perspective(2500px);
@@ -29,8 +31,8 @@ h2 {
 .cardFront {
   position: relative;
   background-color: #fff;
-  width: 500px;
-  height:600px;
+  width: 450px;
+  height:450px;
   overflow: hidden;
   transform-origin: left;
   box-shadow: inset 100px 20px 100px rgba(0,0,0,.2), 30px 0 50px rgba(0,0,0,0.4);
@@ -160,8 +162,8 @@ h2 {
   position: absolute;
   background-color: #fff;
   border: 2px solid yellowgreen;
-  width: 500px;
-  height:600px;
+  width: 450px;
+  height:450px;
   z-index:-1;
   left:0;
   top:0;
