--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body {
  align-items: center;
  justify-content: center;
  margin-top: 100px;
- margin-right: 100px;
- padding-right:100px;
 }
 
 h2 {
@@ -20,8 +18,8 @@ h2 {
 
 .birthdayCard {
   position: relative;
-  width: 10px;
-  height:10px;
+  width: 250px;
+  height:350px;
   cursor: pointer;
   transform-style: preserve-3d;
 	transform: perspective(2500px);
@@ -31,8 +29,8 @@ h2 {
 .cardFront {
   position: relative;
   background-color: #fff;
-  width: 450px;
-  height:450px;
+  width: 250px;
+  height:350px;
   overflow: hidden;
   transform-origin: left;
   box-shadow: inset 100px 20px 100px rgba(0,0,0,.2), 30px 0 50px rgba(0,0,0,0.4);
@@ -162,14 +160,17 @@ h2 {
   position: absolute;
   background-color: #fff;
   border: 2px solid yellowgreen;
-  width: 450px;
-  height:450px;
+  width: 250px;
+  height:350px;
   z-index:-1;
   left:0;
   top:0;
   box-shadow: inset 100px 20px 100px rgba(0,0,0,0.2);
 }
 
+#player {
+ width: 100%;
+}​
 p {
   font-family: cursive;
   margin: 40px;
